# Adafruit_nRF52_Bootloader

./: .gitignore  .gitmodules  .travis.yml  AGENTS.md  CMakeLists.txt  Makefile  NOTES-kh.md  README.md  changelog.md  make.txt  pca10100_bootloader-0.6.2-16-gb3ed95f-dirty_s140_7.2.0.hex  requirements.txt  supported_boards.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: githubci.yml
cmake/cpu/: cortex-m33.cmake  cortex-m4.cmake
cmake/toolchain/: arm_gcc.cmake  set_flags.cmake
lib/sdk/: readme.md
lib/sdk11/: readme.md
lib/softdevice/s132_nrf52_6.1.0/: s132_nrf52_6.1.0_softdevice.hex
lib/softdevice/s140_nrf52_6.1.0/: s140_nrf52_6.1.0_softdevice.hex
lib/softdevice/s140_nrf52_6.1.1/: s140_nrf52_6.1.1_softdevice.uf2
lib/softdevice/s332_nrf52_6.1.1/: README.txt
lib/softdevice/s340_nrf52_6.1.1/: README.txt  readme.txt
lib/softdevice/s340_nrf52_7.0.1/: readme.md  readme.txt
linker/: nrf52.ld  nrf52820.ld  nrf52820_debug.ld  nrf52833.ld  nrf52833_debug.ld  nrf52840.ld  nrf52840_debug.ld  nrf52840_s340_v6.ld  nrf52_debug.ld  nrf_common.ld
nRF5_SDK_11.0.0_89a8197/components/device/: nrf.h
nrf5340/: README.md
nrf5340/common/: nrfx_glue.h  pstorage_platform.h  uf2_block_flip.c  uf2_block_flip.h
nrf5340/common/boards/: boards.c  boards.h
nrf5340/common/usb/: msc_uf2.c  tusb_config.h  usb.c  usb_desc.c
nrf5340/nrf5340_app/segger/: flash_app_mbr_placement.xml  flash_app_placement.xml  nRF5340_app_Bootloader.emProject  nRF5340_app_MemoryMap.xml  nRF53_mbr.emProject
nrf5340/nrf5340_app/src/: main.c  nrfx_config.h
nrf5340/nrf5340_app/src_mbr/: main.c
nrf5340/nrf5340_net/segger/: flash.uf2  flash_net_placement.xml  nRF5340_net_Bootloader.emProject  nRF5340_net_MemoryMap.xml
nrf5340/nrf5340_net/src/: main.c  nrfx_config.h  sdk_config.h
nrf5340/segger/: nRF5340_app_Bootloader.emProject  nRF5340_app_MemoryMap.xml  nRF5340_app_mbr_MemoryMap.xml  nRF53_mbr.emProject
nrf5340/src/: dfu_init.c  main.c  sdk_config.h
nrf5340/src/boards/: boards.c  boards.h
nrf5340/src/usb/: usb.c  usb_desc.h
nrf5340/uf2binaries/: blinky_nrf5340_app_zephyr_0x1000_05Hz.uf2  blinky_nrf5340_app_zephyr_0x1000_2Hz.uf2  blinky_nrf5340_net_zephyr_0x01004000_05Hz.uf2  blinky_nrf5340_net_zephyr_0x01004000_1Hz.uf2
segger/: Adafruit_nRF52_Bootloader.emProject  flash_placement.xml
softdevice/6.0.0/common/: nrf_sdh_ble.c
softdevice/common/softdevice_handler/: softdevice_handler.c  softdevice_handler.h
src/: Makefile  boards.c  boards.h  dfu_ble_svc.c  dfu_init.c  feather52.h  feather52840.h  flash.c  flash.h  flash_nrf5x.c  flash_nrf5x.h  images.c  main.c  make_common.mk  metro52.h  msc_device_app.h  nrfx_config.h  nrfx_glue.h  pinconfig.c  pstorage_platform.h  s132_2.0.1.ld  s132_5.1.0.ld  s140_6.0.0.ld  screen.c  sdk_config.h  tusb_config.h  tusb_descriptors.c  tusb_descriptors.h
src/boards/: boards.c  boards.h  electronut_labs_papyr.h  feather52832.h  feather_nrf52832.h  feather_nrf52840_express.h  mdk_nrf52840_dongle.h  metro_nrf52840_express.h  particle_argon.h  particle_boron.h  particle_xenon.h  pca10056.h  pca10059.h  sparkfun_pro_nrf52840_mini.h
src/boards/ADM_B_NRF52840_1/: board.h
src/boards/Seeed_XIAO_nRF52840/: board.h
src/boards/Seeed_XIAO_nRF52840_Sense/: board.h
src/boards/adm_b_nrf52840_1/: board.h
src/boards/adv360pro/: board.h
src/boards/ae_bl652_bo/: board.h
src/boards/alu40/: board.h
src/boards/aramcon2_badge/: board.h
src/boards/aramcon_badge_2019/: board.h
src/boards/arcade_feather_nrf52840_express/: board.h  pinconfig.c
src/boards/arduino_nano_33_ble/: board.h
src/boards/bast_ble/: board.h
src/boards/bluemicro/: board.h
src/boards/bluemicro_nrf52833/: board.h  board.mk  pinconfig.c
src/boards/bluemicro_nrf52840/: board.h
src/boards/blyst-nano-dk_nRF52832/: board.h
src/boards/bt10/: board.h
src/boards/bt60/: board.h
src/boards/challenger_840_ble/: board.h  pinconfig.c
src/boards/circuitplayground_nrf52840/: board.h
src/boards/ckp/: board.h
src/boards/clue_nrf52840/: board.h
src/boards/crbn60/: board.h
src/boards/ebyte_e104_bt5032a/: board.h  board.mk
src/boards/ebyte_e104_bt5040u/: board.h
src/boards/ebyte_e73_tbb/: board.h
src/boards/electronut_labs_papyr/: board.h
src/boards/eternity36/: board.h
src/boards/feather_nrf52832/: board.cmake  board.h
src/boards/feather_nrf52833_express/: board.cmake  board.h  board.mk
src/boards/feather_nrf52833_pivot/: board.h
src/boards/feather_nrf52840_express/: board.h  board.mk  pinconfig.c
src/boards/feather_nrf52840_express_s340/: board.h  board.mk
src/boards/feather_nrf52840_sense/: board.h
src/boards/feather_nrf52840_sense_tft/: board.h
src/boards/feather_nrf52840_tft/: board.h
src/boards/form/: board.h
src/boards/fs360/: board.h
src/boards/generic_nrf52833/: board.h  pinconfig.c
src/boards/h7evo/: board.h
src/boards/holyiot_nrf52840/: board.h
src/boards/homerow_radiata/: board.h
src/boards/ibk-blyst-nano_nRF52832/: board.h  board.mk
src/boards/ibk-nrf52840/: board.h
src/boards/ikigaisense_vita/: board.h
src/boards/itsybitsy_nrf52840_express/: board.h  pinconfig.c
src/boards/kb64bl/: board.h  board.mk  kb64bl_bootloader-0.6.2-25-gf1e6e7c-dirty_s140_7.2.0.hex
src/boards/kb840/: board.h  board.mk
src/boards/keystar/: board.h  board.mk
src/boards/ledglasses_nrf52840/: board.h
src/boards/lilygo_techo/: board.h  (+1 more)
src/dualbank/: Makefile
src/linker/: nrf52833_s140_v6.ld  nrf52840_s140_v6.ld  nrf52840_s340_v6.ld  nrf52_s132_v6.ld  s132_v6.ld  s140_v6.ld
src/msc/: msc_flash.c  msc_flash.h
src/segger/: Adafruit_nRF52_Bootloader.emProject  nRF52832_xxAA_MemoryMap.xml  nRF52840_xxAA_MemoryMap.xml  nrf52840_bootloader.emProject
src/singlebank/: Makefile
src/uf2/: ghostfat.c  nrf_block_dev_uf2.h  uf2.h  uf2cfg.h
src/usb/: msc_flash.c  msc_flash.h  msc_uf2.c  msc_uf2.h  tusb_config.h  tusb_descriptors.c  tusb_descriptors.h  usb.c  usb_desc.c  usb_desc.h
tools/: build_all.py  gen_boards.py  github_requests.py  hexmerge.py  upload_release_files.py
(+147 files in other folders)
